@@ -13,6 +13,7 @@ UNRELEASED
     * feat: add client.batch()
     * feature: getObjects now accepts attributesToRetrieve:
       signature: getObjects(objectIDs, attributesToRetrieve, callback)
+    * fix: send `x-algolia-agent` instead of `x-user-agent`
 
 2015-05-14  3.3.2
     * FIX: more fixes to the use of $q() in the angular build, now compatible with 1.2.xx and tested
